# lab2_ppgi068

./: CLAUDE.md  Cargo.toml  README.md  log.txt  log_final.txt
samples/: dados_1.csv  dados_2.csv  dados_3.csv  dados_4.csv  dados_5.csv  dados_6.csv
src/: array_signal.rs  diff_eq.rs  gaussian_signal.rs  main.rs  ordinary_least_squares.rs  random_signal.rs  recursive_extended_least_squares.rs  recursive_least_squares.rs  zero_signal.rs
src/questions/: mod.rs  question1.rs  question2.rs  question3.rs  question4.rs  question5.rs  question6.rs
src/system/: first.rs  mod.rs  second.rs
