[package]
name = "lab_script_2"
version = "0.1.0"
edition = "2024"

[dependencies]
aule = { git = "https://github.com/matheuswhite/aule-rs.git" }
ndarray = "0.15.6"
ndarray-inverse = "0.1.9"
num-complex = "0.4.6"
rand = "0.10.0"
rand_distr = "0.6.0"
rustnomial = { git = "https://github.com/philippeitis/rustnomial.git" }
